Add 'role="presentation"' to headers and footers in blockquotes

--- a/src/epub/text/slawkenbergius-en.xhtml
+++ b/src/epub/text/slawkenbergius-en.xhtml
@@ -148,7 +148,7 @@
 			<p><i>Slawkenbergius</i> supposes the word intended was <em>unconvinced</em>, but her strength would not enable her to finish her letter.</p>
 			<p>The heart of the courteous <i>Diego</i> overflowed as he read the letter⁠⸻he ordered his mule forthwith and <i>Fernandez’s</i> horse to be saddled; and as no vent in prose is equal to that of poetry in such conflicts⁠⸺⁠chance, which as often directs us to remedies as to <em>diseases</em>, having thrown a piece of charcoal into the window⁠⸺⁠<i>Diego</i> availed himself of it, and whilst the hostler was getting ready his mule, he eased his mind against the wall as follows.</p>
 			<blockquote epub:type="z3998:verse">
-				<header>
+				<header role="presentation">
 					<p>Ode</p>
 				</header>
 				<p>
@@ -164,7 +164,7 @@
 					<br/>
 					<span>And governs all the man with sympathetick sway.</span>
 				</p>
-				<footer>
+				<footer role="presentation">
 					<p>2nd</p>
 				</footer>
 			</blockquote>
