[Editorial] Replace Latin ligatures

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -57,7 +57,7 @@
 						<p>
 							<i xml:lang="la">Hæc mira, satisque horrenda. Planetarum coitio sub Scorpio Asterismo in nona cœli statione, quam Arabes religioni deputabant efficit <i>Martinum Lutherum</i> sacrilegum hereticum, Christianæ religionis hostem acerrimum atque prophanum, ex horoscopi directione ad Martis coitum, religiosissimus obiit, ejus Anima scelestissima ad infernos navigavit⁠—ab Alecto, Tisiphone &amp; Megara flagellis igneis cruciata perenniter.</i>
 						</p>
-						<cite>⸺⁠Lucas Gaurieus in <i epub:type="se:name.publication.book" xml:lang="la">Tractatu astrologico de præteritis multorum hominum accidentibus per genituras examinatis</i></cite>
+						<cite>⸺⁠Lucas Gaurieus in <i epub:type="se:name.publication.book" xml:lang="la">Tractatu astrologico de praeteritis multorum hominum accidentibus per genituras examinatis</i></cite>
 					</blockquote>
 					<p>
 						<a href="slawkenbergius-en.xhtml#noteref-13" epub:type="backlink">↩</a>
@@ -74,7 +74,7 @@
 						<i xml:lang="fr">Mais quand on se represente que l’Enfant a vecu près de quatre-vingts ans, &amp; qu’il a composé quatre-vingts Ouvrages differents tous fruits d’une longue lecture⁠—il faut convenir que tout ce qui est incroyable n’est pas toujours faux, &amp; que la <em>Vraisemblance n’est pas toujours du côté de la Verité</em>.</i>
 					</p>
 					<p>
-						<i xml:lang="fr">Il n’avoit que dix neuf ans lorsqu’il composa <i epub:type="se:name.publication.paper" xml:lang="la">Gonopsychanthropologia de Origine Animæ humanæ</i>.</i>
+						<i xml:lang="fr">Il n’avoit que dix neuf ans lorsqu’il composa <i epub:type="se:name.publication.paper" xml:lang="la">Gonopsychanthropologia de Origine Animae humanae</i>.</i>
 					</p>
 					<p>
 						<i xml:lang="fr">(Les Enfans celebres, revûs &amp; corrigés par <abbr>M.</abbr> de la Monnoye de l’Academie Françoise.)</i>
