--- a/src/epub/text/slawkenbergius-la.xhtml
+++ b/src/epub/text/slawkenbergius-la.xhtml
@@ -12,7 +12,7 @@
 				<i xml:lang="la">Vespera quâdam frigidulâ, posteriori in parte mensis <em>Augusti</em>, peregrinus, mulo fusco colore insidens, manticâ a tergo, paucis indusiis, binis calceis, braccisque sericis coccineis repleta, <em>Argentoratum</em> ingressus est.</i>
 			</p>
 			<p>
-				<i xml:lang="la">Militi eum percontanti, quum portas intraret dixit, se apud Nasorum promontorium fuisse, Francofurtum proficisci, et Argentoratum, transitu ad fines Sarmatiæ mensis intervallo, reversurum.</i>
+				<i xml:lang="la">Militi eum percontanti, quum portas intraret dixit, se apud Nasorum promontorium fuisse, Francofurtum proficisci, et Argentoratum, transitu ad fines Sarmatiae mensis intervallo, reversurum.</i>
 			</p>
 			<p>
 				<i xml:lang="la">Miles peregrini in faciem suspexit⁠⸺⁠Dî boni, nova forma nasi!</i>
@@ -27,7 +27,7 @@
 				<i xml:lang="la">Non immerito, benigne peregrine, respondit miles.</i>
 			</p>
 			<p>
-				<i xml:lang="la">Nihili æstimo, ait ille tympanista, e pergamenâ factitius est.</i>
+				<i xml:lang="la">Nihili aestimo, ait ille tympanista, e pergamenâ factitius est.</i>
 			</p>
 			<p>
 				<i xml:lang="la">Prout christianus sum, inquit miles, nasus ille, ni sexties major sit, meo esset conformis.</i>
@@ -42,10 +42,10 @@
 				<i xml:lang="la">Miseret me, inquit tympanista, qui non ambo tetigimus!</i>
 			</p>
 			<p>
-				<i xml:lang="la">Eodem temporis puncto, quo hæc res argumentata fuit inter militem et tympanistam, disceptabatur ibidem tubicine et uxore suâ qui tunc accesserunt, et peregrino prætereunte, restiterunt.</i>
+				<i xml:lang="la">Eodem temporis puncto, quo haec res argumentata fuit inter militem et tympanistam, disceptabatur ibidem tubicine et uxore suâ qui tunc accesserunt, et peregrino praetereunte, restiterunt.</i>
 			</p>
 			<p>
-				<i xml:lang="la">Quantus nasus! æque longus est, ait tubicina, ac tuba.</i>
+				<i xml:lang="la">Quantus nasus! aeque longus est, ait tubicina, ac tuba.</i>
 			</p>
 			<p>
 				<i xml:lang="la">Et ex eodem metallo, ait tubicen, velut sternutamento audias.</i>
@@ -54,31 +54,31 @@
 				<i xml:lang="la">Tantum abest, respondit illa, quod fistulam dulcedine vincit.</i>
 			</p>
 			<p>
-				<i xml:lang="la">Æneus est, ait tubicen.</i>
+				<i xml:lang="la">Aeneus est, ait tubicen.</i>
 			</p>
 			<p>
 				<i xml:lang="la">Nequaquam, respondit uxor.</i>
 			</p>
 			<p>
-				<i xml:lang="la">Rursum affirmo, ait tubicen, quod æneus est.</i>
+				<i xml:lang="la">Rursum affirmo, ait tubicen, quod aeneus est.</i>
 			</p>
 			<p>
 				<i xml:lang="la">Rem penitus explorabo; prius, enim digito tangam, ait uxor, quam dormivero.</i>
 			</p>
 			<p>
-				<i xml:lang="la">Mulus peregrini gradu lento progressus est, ut unumquodque verbum controversiæ, non tantum inter militem et tympanistam, verum etiam inter tubicinem et uxorem ejus, audiret.</i>
+				<i xml:lang="la">Mulus peregrini gradu lento progressus est, ut unumquodque verbum controversiae, non tantum inter militem et tympanistam, verum etiam inter tubicinem et uxorem ejus, audiret.</i>
 			</p>
 			<p>
-				<i xml:lang="la">Nequaquam, ait ille, in muli collum fræna demittens, et manibus ambabus in pectus positis, (mulo lentè progrediente) nequaquam, ait ille respiciens, non necesse est ut res isthæc dilucidata foret. Minime gentium! meus nasus nunquam tangetur, dum spiritus hos reget artus⁠—Ad quid agendum? ait uxor burgomagistri.</i>
+				<i xml:lang="la">Nequaquam, ait ille, in muli collum fraena demittens, et manibus ambabus in pectus positis, (mulo lentè progrediente) nequaquam, ait ille respiciens, non necesse est ut res isthaec dilucidata foret. Minime gentium! meus nasus nunquam tangetur, dum spiritus hos reget artus⁠—Ad quid agendum? ait uxor burgomagistri.</i>
 			</p>
 			<p>
-				<i xml:lang="la">Peregrinus illi non respondit. Votum faciebat tunc temporis sancto Nicolao; quo facto, in sinum dextrum inserens, e quâ negligenter pependit acinaces, lento gradu processit per plateam Argentorati latam quæ ad diversorium templo ex adversum ducit.</i>
+				<i xml:lang="la">Peregrinus illi non respondit. Votum faciebat tunc temporis sancto Nicolao; quo facto, in sinum dextrum inserens, e quâ negligenter pependit acinaces, lento gradu processit per plateam Argentorati latam quae ad diversorium templo ex adversum ducit.</i>
 			</p>
 			<p>
 				<i xml:lang="la">Peregrinus mulo descendens stabulo includi, et manticam inferri jussit: quâ apertâ et coccineis sericis femoralibus extractis cum argenteo laciniato <i xml:lang="el">Περιζώματα</i>, his sese induit, statimque, acinaci in manu, ad forum deambulavit.</i>
 			</p>
 			<p>
-				<i xml:lang="la">Quod ubi peregrinus esset ingressus, uxorem tubicinis obviam euntem aspicit; illico cursum flectit, metuens ne nasus suus exploraretur, atque ad diversorium regressus est⁠—exuit se vestibus; braccas coccineas sericas manticæ imposuit mulumque educi jussit.</i>
+				<i xml:lang="la">Quod ubi peregrinus esset ingressus, uxorem tubicinis obviam euntem aspicit; illico cursum flectit, metuens ne nasus suus exploraretur, atque ad diversorium regressus est⁠—exuit se vestibus; braccas coccineas sericas manticae imposuit mulumque educi jussit.</i>
 			</p>
 			<p>
 				<i xml:lang="la">Francofurtum proficiscor, ait ille, et Argentoratum quatuor abhinc hebdomadis revertar.</i>
@@ -90,7 +90,7 @@
 				<i xml:lang="la">Longa via est! respondet hospes, nisi plurimum esset negoti.⁠—Enimvero, ait peregrinus, a Nasorum promontorio redii, et nasum speciosissimum, egregiosissimumque quem unquam quisquam sortitus est, acquisivi.</i>
 			</p>
 			<p>
-				<i xml:lang="la">Dum peregrinus hanc miram rationem de seipso reddit, hospes et uxor ejus, oculis intentis, peregrini nasum contemplantur⁠⸺⁠Per sanctos sanctasque omnes, ait hospitis uxor, nasis duodecim maximis in toto Argentorato major est!⁠—estne, ait illa mariti in aurem insusurrans, nonne est nasus prægrandis?</i>
+				<i xml:lang="la">Dum peregrinus hanc miram rationem de seipso reddit, hospes et uxor ejus, oculis intentis, peregrini nasum contemplantur⁠⸺⁠Per sanctos sanctasque omnes, ait hospitis uxor, nasis duodecim maximis in toto Argentorato major est!⁠—estne, ait illa mariti in aurem insusurrans, nonne est nasus praegrandis?</i>
 			</p>
 			<p>
 				<i xml:lang="la">Dolus inest, anime mî, ait hospes⁠—nasus est falsus.</i>
